--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  overscroll-behavior: none;
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
